--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,12 @@
 NODE_ENV=development
 PORT=3000
 
-# JWT Configuracion
+# JWT Configuration
 JWT_SECRET=your_jwt_secret_key
 JWT_EXPIRATION=24h
+
+# Database
+DATABASE_URL="postgresql://postgres:postgres@localhost:5454/project_management?schema=public"
+
+# Frontend URL (for CORS)
+FRONTEND_URL="http://localhost:5173"
