--- a/.github/workflows/cd-staging-prod.yml
+++ b/.github/workflows/cd-staging-prod.yml
@@ -2,8 +2,8 @@ name: CD - Staging + Production
 
 on:
   push:
-    branches: ['main']
-  push:
+    branches:
+      - 'main'
     tags:
       - 'v*'
   workflow_dispatch:
