--- a/.github/workflows/cd-staging-prod.yml
+++ b/.github/workflows/cd-staging-prod.yml
@@ -85,7 +85,9 @@ jobs:
           $sshDir = "$env:USERPROFILE\.ssh"
           if (-not (Test-Path $sshDir)) { New-Item -ItemType Directory -Path $sshDir -Force | Out-Null }
           
-          $STAGING_SSH_KEY | Out-File -FilePath "$sshDir\deploy_key" -Encoding utf8 -NoNewline
+          # Save SSH key with proper format (no BOM, LF line endings)
+          $keyContent = $env:STAGING_SSH_KEY -replace "`r`n", "`n" -replace "`r", "`n"
+          [System.IO.File]::WriteAllText("$sshDir\deploy_key", $keyContent, [System.Text.UTF8Encoding]::new($false))
           icacls "$sshDir\deploy_key" /inheritance:r /grant "$env:USERNAME`:F" | Out-Null
           
           $env:RELEASE = "${{ steps.release.outputs.RELEASE_ID }}"
@@ -141,7 +143,9 @@ jobs:
           $sshDir = "$env:USERPROFILE\.ssh"
           if (-not (Test-Path $sshDir)) { New-Item -ItemType Directory -Path $sshDir -Force | Out-Null }
           
-          $STAGING_SSH_KEY | Out-File -FilePath "$sshDir\deploy_key" -Encoding utf8 -NoNewline
+          # Save SSH key with proper format (no BOM, LF line endings)
+          $keyContent = $env:STAGING_SSH_KEY -replace "`r`n", "`n" -replace "`r", "`n"
+          [System.IO.File]::WriteAllText("$sshDir\deploy_key", $keyContent, [System.Text.UTF8Encoding]::new($false))
           icacls "$sshDir\deploy_key" /inheritance:r /grant "$env:USERNAME`:F" | Out-Null
           
           $rollbackScript = @"
@@ -192,7 +196,9 @@ jobs:
           $sshDir = "$env:USERPROFILE\.ssh"
           if (-not (Test-Path $sshDir)) { New-Item -ItemType Directory -Path $sshDir -Force | Out-Null }
           
-          $PROD_SSH_KEY | Out-File -FilePath "$sshDir\deploy_key" -Encoding utf8 -NoNewline
+          # Save SSH key with proper format (no BOM, LF line endings)
+          $keyContent = $env:PROD_SSH_KEY -replace "`r`n", "`n" -replace "`r", "`n"
+          [System.IO.File]::WriteAllText("$sshDir\deploy_key", $keyContent, [System.Text.UTF8Encoding]::new($false))
           icacls "$sshDir\deploy_key" /inheritance:r /grant "$env:USERNAME`:F" | Out-Null
           
           $env:RELEASE = "${{ steps.release.outputs.RELEASE_ID }}"
@@ -248,7 +254,9 @@ jobs:
           $sshDir = "$env:USERPROFILE\.ssh"
           if (-not (Test-Path $sshDir)) { New-Item -ItemType Directory -Path $sshDir -Force | Out-Null }
           
-          $PROD_SSH_KEY | Out-File -FilePath "$sshDir\deploy_key" -Encoding utf8 -NoNewline
+          # Save SSH key with proper format (no BOM, LF line endings)
+          $keyContent = $env:PROD_SSH_KEY -replace "`r`n", "`n" -replace "`r", "`n"
+          [System.IO.File]::WriteAllText("$sshDir\deploy_key", $keyContent, [System.Text.UTF8Encoding]::new($false))
           icacls "$sshDir\deploy_key" /inheritance:r /grant "$env:USERNAME`:F" | Out-Null
           
           $rollbackScript = @"
